--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,10 @@
   </head>
 
   <body>
-    <p class="alert"><%= alert %></p>
     <%= render 'partials/navbar' %>
-    <%= yield %>
+    <div class='container'>
+      <p class="alert"><%= alert %></p>
+      <%= yield %>
+    </div>
   </body>
 </html>
