--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -11,14 +11,20 @@
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success mx-auto" type="submit">Search</button>
+        <button class="btn btn-outline-warning mx-auto" type="submit">Search</button>
       </form>
       <ul class="navbar-nav mx-auto">
         <li class="nav-item">
           <a class="nav-link" href="#">Cart</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
+          <% if user_signed_in? %>
+            <%# <a class="nav-link" href="#">Logout</a> %>
+            <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+          <% else %>
+            <%# <a class="nav-link" href="#">Login</a> %>
+            <%= link_to 'Login', new_user_session_path, class: 'nav-link' %>
+          <% end %>
         </li>
       </ul>
     </div>
