fixed navbar, associations, routes

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -27,12 +27,12 @@
 
 <p>
   <strong>Buyer:</strong>
-  <%= @listing.buyer_id %>
+  <%= @listing.buyer.username %>
 </p>
 
 <p>
   <strong>Seller:</strong>
-  <%= @listing.seller_id %>
+  <%= @listing.seller.username %>
 </p>
 
 <p>
