added cards on browse and view, small improvements here and there

--- a/app/views/home/page.html.erb
+++ b/app/views/home/page.html.erb
@@ -1,2 +1,15 @@
-<h1>Home#page</h1>
-<p>Find me in app/views/home/page.html.erb</p>
+<div class="container-fluid">
+  <div class="home-page-text">
+    <h1 class="p-3 mb-2 bg-warning text-dark">The Bank of Notes (and Coins!)</h1>
+    <br>
+    <br>
+    <h2>Buy and sell old money online</h2>
+    <br>
+    <p>An easy way to trade your old banknotes and coins.</p>
+    <br>
+    <p>If you have <strong>MONEY TO SELL</strong>, just click the sell button, sign in, and make a listing.</p>
+    <br>
+    <p>If you want to <strong>BUY OLD MONEY</strong>, browse through the current offers and simply buy through our secure payment system.</p>
+  </div>
+  <%# <%= image_tag "coins.jpg", alt: "Pile of coins", class: "img-fluid" %>
+</div>
