--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -9,6 +9,7 @@
     <%= f.input :condition %>
     <%= f.input :description %>
     <%= f.input :price %>
+    <%= f.file_field :images, multiple: true %>
   </div>
 
   <div class="form-actions">
