--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,4 +1,8 @@
-<p id="notice"><%= notice %></p>
+<!-- <p id="notice"><%= notice %></p>
+
+<% @listing.images.each do |image| %>
+  <%= image_tag image %>
+<% end %>
 
 <p>
   <strong>Title:</strong>
@@ -25,20 +29,73 @@
   <%= @listing.price %>
 </p>
 
-<p>
+<%# <p>
   <strong>Buyer:</strong>
-  <%= @listing.buyer.username %>
-</p>
+  <%= @listing.buyer_id %>
+<%# </p> %>
 
 <p>
   <strong>Seller:</strong>
   <%= @listing.seller.username %>
-</p>
+</p> -->
 
-<p>
+<%# <p>
   <strong>Profile:</strong>
   <%= @listing.profile_id %>
-</p>
+<%# </p> %>
 
-<%= link_to 'Edit', edit_listing_path(@listing) %> |
-<%= link_to 'Back', listings_path %>
+<p id="notice"><%= notice %></p>
+
+<h1 class="title"><%= @listing.title %></h1>
+
+<div class="row">
+  <div class="col">
+    <div class="card">
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <%= image_tag @listing.images.first, class: "d-block w-100" %>
+          </div>
+          <div class="carousel-item">
+            <%= image_tag @listing.images.second, class: "d-block w-100" %>
+          </div>
+          <div class="carousel-item">
+            <%= image_tag @listing.images.third, class: "d-block w-100" %>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div> 
+    </div>
+  </div>
+  <div class="col">
+    <div class="card-body border border-warning">
+      <p class="card-text">
+        <p>Denomination: <%= @listing.denomination %></p>
+        <p>Condition: <%= @listing.condition %></p>
+        <p>Description: <%= @listing.description %></p>
+        <p>Price: <%= @listing.price %></p>
+        <%= link_to 'Buy', listings_path, class: "btn btn-warning" %>
+      </p>
+    </div>
+    <br>
+  </div>
+</div>
+
+<%# <%= link_to 'Edit', edit_listing_path(@listing), class: "btn btn-warning"%>
+
+<br>
+<br>
+<%# <%= link_to 'View', listing_path(@listing.id), class: "btn btn-warning" %> 
+
