--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,15 @@
   position: absolute;
   height: 50px;
 }
+
+.card-img-top {
+  width: 100%;
+  height: 30vw;
+  object-fit: cover;
+}
+
+.title {
+  text-align: center;
+  margin-top: 10%;
+  margin-bottom: 5%;
+}
