--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,41 +1,26 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listings</h1>
+<h1 class="title">Browse the current offers</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Denomination</th>
-      <th>Condition</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th>Buyer</th>
-      <th>Seller</th>
-      <th>Profile</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @listings.each do |listing| %>
-      <tr>
-        <td><%= listing.title %></td>
-        <td><%= listing.denomination %></td>
-        <td><%= listing.condition %></td>
-        <td><%= listing.description %></td>
-        <td><%= listing.price %></td>
-        <td><%= listing.buyer_id %></td>
-        <td><%= listing.seller_id %></td>
-        <td><%= listing.profile_id %></td>
-        <td><%= link_to 'Show', listing %></td>
-        <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
-        <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Listing', new_listing_path %>
+<div class="row">
+  <% @listings.each do |listing| %>
+    <div class="col-md-6">
+      <div class="card">
+        <% if listing.images && listing.images.first %>
+         <%= image_tag listing.images.first, class: "card-img-top" %>
+        <% else %>
+          <%= image_tag "coins.jpg", class: "card-img-top" %>
+        <% end %>
+      </div>
+      <div class="card-body border border-warning">
+        <p class="card-text">
+          <strong><%= listing.title %></strong>
+          <p>Denomination: <%= listing.denomination %></p>
+          <p>Price: <%= listing.price %></p>
+          <%= link_to 'View', listing_path(listing.id), class: "btn btn-warning" %>
+        </p>
+      </div>
+      <br>
+    </div>
+  <% end %>
+</div>
