--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -17,9 +17,9 @@
       <button class="btn btn-outline-warning mx-auto" type="submit">Search</button>
     </form>
     <ul class="navbar-nav mx-auto">
-      <li class="nav-item">
+      <%# <li class="nav-item">
         <a class="nav-link" href="#">Cart</a>
-      </li>
+      </li> %>
       <li class="nav-item">
         <% if user_signed_in? %>
           <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'nav-link' %>
