improved few route issues

--- a/app/views/home/page.html.erb
+++ b/app/views/home/page.html.erb
@@ -9,7 +9,7 @@
     <br>
     <p>If you have <strong>MONEY TO SELL</strong>, just click the sell button, sign in, and make a listing.</p>
     <br>
-    <p>If you want to <strong>BUY OLD MONEY</strong>, browse through the current offers and simply buy through our secure payment system.</p>
+    <p>If you want to <strong>BUY OLD MONEY</strong> then browse through the offers, sign in, and simply buy your chosen listing through our secure payment system.</p>
   </div>
   <%# <%= image_tag "coins.jpg", alt: "Pile of coins", class: "img-fluid" %>
 </div>
