--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -44,6 +44,8 @@
       <%# the information for the listings form %>
       <p class="card-text">
         <p>Denomination: <%= @listing.denomination %></p>
+        <p>Issuing country: <%= @listing.issuing_country %></p>
+        <p>Year: <%= @listing.year %></p>
         <p>Condition: <%= @listing.condition %></p>
         <p>Description: <%= @listing.description %></p>
         <p>Seller: <%= @listing.seller.username %></p>
