--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -7,6 +7,10 @@
     <%= f.input :first_name %>
     <%= f.input :last_name %>
     <%= f.input :username %>
+    <%= f.input :address %>
+    <%= f.input :suburb %>
+    <%= f.input :post_code %>
+    <%= f.input :country, as: :string %>
     <%= f.hidden_field :user_type, value: user_type %>
   </div>
 
