--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -19,6 +19,10 @@
         <td><%= profile.first_name %></td>
         <td><%= profile.last_name %></td>
         <td><%= profile.username %></td>
+        <td><%= profile.address %></td>
+        <td><%= profile.suburb %></td>
+        <td><%= profile.post_code %></td>
+        <td><%= profile.country %></td>
         <td><%= profile.user_id %></td>
         <td><%= link_to 'Show', profile %></td>
         <td><%= link_to 'Edit', edit_profile_path(profile) %></td>
