--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -6,6 +6,8 @@
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :denomination %>
+    <%= f.input :issuing_country, as: :string %>
+    <%= f.input :year %>
     <%= f.input :condition %>
     <%= f.input :description %>
     <%= f.input :price %>
