--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', profile: @profile, user_type: @user_type %>
 
-<%= link_to 'Back', profiles_path %>
+<%= link_to 'Back', profiles_path, class: "btn btn-warning" %>
