--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -16,9 +16,29 @@
 </p>
 
 <p>
+  <strong>Address:</strong>
+  <%= @profile.address %>
+</p>
+
+<p>
+  <strong>Suburb:</strong>
+  <%= @profile.suburb %>
+</p>
+
+<p>
+  <strong>Postcode:</strong>
+  <%= @profile.post_code %>
+</p>
+
+<p>
+  <strong>Country:</strong>
+  <%= @profile.country %>
+</p>
+
+<p>
   <strong>User:</strong>
   <%= @profile.user_id %>
 </p>
 
-<%= link_to 'Edit', edit_profile_path(@profile) %> |
-<%= link_to 'Back', profiles_path %>
+<%= link_to 'Edit', edit_profile_path(@profile), class: "btn btn-warning"  %> |
+<%= link_to 'Back', profiles_path, class: "btn btn-warning"  %>
