--- a/app/assets/stylesheets/listings.scss
+++ b/app/assets/stylesheets/listings.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+// styling for the card title when viewing individual listings
 .card-title{
     background-color: rgb(44, 43, 43);
     text-align: center;
