--- a/app/views/home/page.html.erb
+++ b/app/views/home/page.html.erb
@@ -1,3 +1,4 @@
+<%# fluid container gives responsiveness to the homepage %>
 <div class="container-fluid">
   <div class="home-page-text">
     <h1 class="p-3 mb-2 bg-warning text-dark">The Bank of Notes (and Coins!)</h1>
