--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form', listing: @listing %>
 
+<%# the Show button is same as in the rest of the app %>
 <%= link_to 'Show', @listing, class: "btn btn-warning" %>
 <%# <%= link_to 'Back', listings_path, class: "btn btn-warning" %> 
