--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -2,6 +2,7 @@
 
 <h1 class="title">Browse the current offers</h1>
 
+<%# looping through each listing and displaying it as a card with image on the top and text at the bottom %>
 <div class="row">
   <% @listings.each do |listing| %>
     <div class="col-md-6">
