--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form', listing: @listing %>
 
+<%# the Back button is same style as the other buttons in the app %>
 <%= link_to 'Back', listings_path, class: "btn btn-warning"  %>
