--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form', profile: @profile, user_type: @user_type %>
 
+<%# the Back button is same style as the other buttons in the app %>
 <%= link_to 'Back', profiles_path, class: "btn btn-warning" %>
