--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,3 +1,4 @@
+<%# navbar is fixed on top and includes the following styling %>
 <nav class="navbar fixed-top navbar-expand navbar-dark bg-dark">
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mx-auto">
