--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -3,6 +3,7 @@
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
+  <%# the fileds that the profile folm has. Country is set as string here so it will not clash with the simple-form gem for countries %>
   <div class="form-inputs">
     <%= f.input :first_name %>
     <%= f.input :last_name %>
