--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -4,7 +4,7 @@
 
 <%# made cards for better layout %>
 <div class="row">
-  <div class="col">
+  <div class="col-lg-6 col-sm-12">
     <%# individual cards for each image, two images to be uploaded, obverse and reverse %>
     <div class="card" style="width: 100%;">
       <h5 class="card-title text-warning">Obverse</h5>
