--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,8 +19,8 @@
 
 // additional styling of the navbar
 .navbar {
-  position: absolute;
-  height: 50px;
+  position: fixed;
+  height: 80px;
 }
 
 // additional styling of the card images
@@ -29,10 +29,32 @@
   height: 30vw;
   object-fit: cover;
 }
+.card-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 // additional styling of the titles for each listing
 .title {
   text-align: center;
   margin-top: 10%;
   margin-bottom: 5%;
+}
+
+.listing_form {
+  margin-top: 10%;
+}
+
+#listing_images {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.alert {
+  margin-top: 10%;
+}
+
+.homepage-title {
+  text-align: center;
 }
