--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -5,7 +5,7 @@
 <%# looping through each listing and displaying it as a card with image on the top and text at the bottom %>
 <div class="row">
   <% @listings.each do |listing| %>
-    <div class="col-md-6">
+    <div class="col-lg-6 col-sm-12">
       <div class="card">
         <% if listing.images && listing.images.first %>
          <%= image_tag listing.images.first, class: "card-img-top" %>
