--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,6 +1,8 @@
-<h1>New Listing</h1>
-
-<%= render 'form', listing: @listing %>
-
-<%# the Back button is same style as the other buttons in the app %>
-<%= link_to 'Back', listings_path, class: "btn btn-warning"  %>
+<div class="listing_form">  
+  <h1>New Listing</h1>
+  
+  <%= render 'form', listing: @listing %>
+  
+  <%# the Back button is same style as the other buttons in the app %>
+  <%= link_to 'Back', listings_path, class: "btn btn-warning" %>
+</div>
